parser/y.output

 0: reduce/reduce conflict  (red'ns 2 and 49) on $end
0: shift/reduce conflict (shift 3(0), red'n 49(0)) on HELP
 0: reduce/reduce conflict  (red'ns 2 and 79) on $end
0: shift/reduce conflict (shift 38(0), red'n 79(0)) on NUM
0: shift/reduce conflict (shift 42(0), red'n 79(0)) on IDENT
0: shift/reduce conflict (shift 45(3), red'n 79(0)) on PLUS
0: shift/reduce conflict (shift 46(3), red'n 79(0)) on MINUS
0: shift/reduce conflict (shift 44(0), red'n 79(0)) on COLON
0: shift/reduce conflict (shift 50(0), red'n 79(0)) on NOT
0: shift/reduce conflict (shift 47(1), red'n 79(0)) on AND
0: shift/reduce conflict (shift 48(1), red'n 79(0)) on OR
0: shift/reduce conflict (shift 49(2), red'n 79(0)) on XOR
0: shift/reduce conflict (shift 22(0), red'n 79(0)) on ADD
0: shift/reduce conflict (shift 24(0), red'n 79(0)) on DELETE
0: shift/reduce conflict (shift 26(0), red'n 79(0)) on SET
0: shift/reduce conflict (shift 28(0), red'n 79(0)) on DONE
0: shift/reduce conflict (shift 33(0), red'n 79(0)) on AGE
0: shift/reduce conflict (shift 34(0), red'n 79(0)) on DUE
0: shift/reduce conflict (shift 30(0), red'n 79(0)) on LIKE
0: shift/reduce conflict (shift 43(0), red'n 79(0)) on LOOP
0: shift/reduce conflict (shift 3(0), red'n 79(0)) on HELP
0: shift/reduce conflict (shift 36(0), red'n 79(0)) on QUOTE
0: shift/reduce conflict (shift 35(0), red'n 79(0)) on DQUOTE
 0: reduce/reduce conflict  (red'ns 2 and 89) on $end
0: shift/reduce conflict (shift 38(0), red'n 89(0)) on NUM
0: shift/reduce conflict (shift 42(0), red'n 89(0)) on IDENT
0: shift/reduce conflict (shift 45(3), red'n 89(0)) on PLUS
0: shift/reduce conflict (shift 46(3), red'n 89(0)) on MINUS
0: shift/reduce conflict (shift 44(0), red'n 89(0)) on COLON
0: shift/reduce conflict (shift 50(0), red'n 89(0)) on NOT
0: shift/reduce conflict (shift 47(1), red'n 89(0)) on AND
0: shift/reduce conflict (shift 48(1), red'n 89(0)) on OR
0: shift/reduce conflict (shift 49(2), red'n 89(0)) on XOR
0: shift/reduce conflict (shift 22(0), red'n 89(0)) on ADD
0: shift/reduce conflict (shift 24(0), red'n 89(0)) on DELETE
0: shift/reduce conflict (shift 26(0), red'n 89(0)) on SET
0: shift/reduce conflict (shift 28(0), red'n 89(0)) on DONE
0: shift/reduce conflict (shift 33(0), red'n 89(0)) on AGE
0: shift/reduce conflict (shift 34(0), red'n 89(0)) on DUE
0: shift/reduce conflict (shift 30(0), red'n 89(0)) on LIKE
0: shift/reduce conflict (shift 43(0), red'n 89(0)) on LOOP
0: shift/reduce conflict (shift 3(0), red'n 89(0)) on HELP
0: shift/reduce conflict (shift 36(0), red'n 89(0)) on QUOTE
0: shift/reduce conflict (shift 35(0), red'n 89(0)) on DQUOTE
state 0
	$accept: .command $end 
	command_stmt: .    (2)
	task_list_filter: .    (49)
	assign_group: .    (79)
	shard_content: .    (89)

	NUM  shift 38
	IDENT  shift 42
	PLUS  shift 45
	MINUS  shift 46
	COLON  shift 44
	NOT  shift 50
	AND  shift 47
	OR  shift 48
	XOR  shift 49
	UI  shift 4
	GUI  shift 5
	EXPLAIN  shift 6
	LOG  shift 18
	UNDO  shift 19
	TASK  shift 20
	TAG  shift 29
	ADD  shift 22
	DELETE  shift 24
	SET  shift 26
	DONE  shift 28
	AGE  shift 33
	DUE  shift 34
	LIKE  shift 30
	LOOP  shift 43
	HELP  shift 3
	QUOTE  shift 36
	DQUOTE  shift 35
	.  reduce 2 (src line 51)

	command  goto 1
	id  goto 27
	id_group  goto 25
	command_stmt  goto 2
	log_list  goto 7
	undo_log  goto 8
	task_help  goto 9
	task_list  goto 10
	task_add  goto 11
	task_delete  goto 12
	task_set  goto 13
	task_done  goto 14
	tag_help  goto 15
	tag_list  goto 16
	tag_set  goto 17
	task_list_filter  goto 21
	content  goto 23
	content_group  goto 31
	assign_group  goto 32
	content_logic  goto 39
	assign_tag  goto 40
	unassign_tag  goto 41
	shard_content  goto 37

state 1
	$accept:  command.$end 

	$end  accept
	.  error


state 2
	command:  command_stmt.    (1)

	.  reduce 1 (src line 48)


state 3
	command_stmt:  HELP.    (3)
	tag_help:  HELP.TAG HELP 

	TAG  shift 51
	.  reduce 3 (src line 53)


state 4
	command_stmt:  UI.    (4)

	.  reduce 4 (src line 54)


state 5
	command_stmt:  GUI.    (5)

	.  reduce 5 (src line 55)


state 6
	command_stmt:  EXPLAIN.    (6)

	.  reduce 6 (src line 56)


state 7
	command_stmt:  log_list.    (7)

	.  reduce 7 (src line 58)


state 8
	command_stmt:  undo_log.    (8)

	.  reduce 8 (src line 59)


state 9
	command_stmt:  task_help.    (9)

	.  reduce 9 (src line 61)


state 10
	command_stmt:  task_list.    (10)
	task_help:  task_list.HELP 

	HELP  shift 52
	.  reduce 10 (src line 62)


state 11
	command_stmt:  task_add.    (11)
	task_help:  task_add.HELP 

	HELP  shift 53
	.  reduce 11 (src line 63)


state 12
	command_stmt:  task_delete.    (12)
	task_help:  task_delete.HELP 

	HELP  shift 54
	.  reduce 12 (src line 64)


state 13
	command_stmt:  task_set.    (13)
	task_help:  task_set.HELP 

	HELP  shift 55
	.  reduce 13 (src line 65)


state 14
	command_stmt:  task_done.    (14)

	.  reduce 14 (src line 66)


state 15
	command_stmt:  tag_help.    (15)

	.  reduce 15 (src line 68)


state 16
	command_stmt:  tag_list.    (16)
	tag_help:  tag_list.HELP 

	HELP  shift 56
	.  reduce 16 (src line 69)


state 17
	command_stmt:  tag_set.    (17)
	tag_help:  tag_set.HELP 

	HELP  shift 57
	.  reduce 17 (src line 70)


state 18
	log_list:  LOG.    (18)
	log_list:  LOG.NUM 

	NUM  shift 58
	.  reduce 18 (src line 74)


state 19
	undo_log:  UNDO.    (20)
	undo_log:  UNDO.id 

	NUM  shift 38
	.  reduce 20 (src line 79)

	id  goto 59

20: shift/reduce conflict (shift 60(0), red'n 49(0)) on HELP
 20: reduce/reduce conflict  (red'ns 49 and 79) on $end
20: shift/reduce conflict (shift 38(0), red'n 79(0)) on NUM
20: shift/reduce conflict (shift 42(0), red'n 79(0)) on IDENT
20: shift/reduce conflict (shift 45(3), red'n 79(0)) on PLUS
20: shift/reduce conflict (shift 46(3), red'n 79(0)) on MINUS
20: shift/reduce conflict (shift 44(0), red'n 79(0)) on COLON
20: shift/reduce conflict (shift 50(0), red'n 79(0)) on NOT
20: shift/reduce conflict (shift 47(1), red'n 79(0)) on AND
20: shift/reduce conflict (shift 48(1), red'n 79(0)) on OR
20: shift/reduce conflict (shift 49(2), red'n 79(0)) on XOR
20: shift/reduce conflict (shift 62(0), red'n 79(0)) on ADD
20: shift/reduce conflict (shift 64(0), red'n 79(0)) on DELETE
20: shift/reduce conflict (shift 65(0), red'n 79(0)) on SET
20: shift/reduce conflict (shift 63(0), red'n 79(0)) on DONE
20: shift/reduce conflict (shift 33(0), red'n 79(0)) on AGE
20: shift/reduce conflict (shift 34(0), red'n 79(0)) on DUE
20: shift/reduce conflict (shift 30(0), red'n 79(0)) on LIKE
20: shift/reduce conflict (shift 43(0), red'n 79(0)) on LOOP
20: shift/reduce conflict (shift 60(0), red'n 79(0)) on HELP
20: shift/reduce conflict (shift 36(0), red'n 79(0)) on QUOTE
20: shift/reduce conflict (shift 35(0), red'n 79(0)) on DQUOTE
 20: reduce/reduce conflict  (red'ns 49 and 89) on $end
20: shift/reduce conflict (shift 38(0), red'n 89(0)) on NUM
20: shift/reduce conflict (shift 42(0), red'n 89(0)) on IDENT
20: shift/reduce conflict (shift 45(3), red'n 89(0)) on PLUS
20: shift/reduce conflict (shift 46(3), red'n 89(0)) on MINUS
20: shift/reduce conflict (shift 44(0), red'n 89(0)) on COLON
20: shift/reduce conflict (shift 50(0), red'n 89(0)) on NOT
20: shift/reduce conflict (shift 47(1), red'n 89(0)) on AND
20: shift/reduce conflict (shift 48(1), red'n 89(0)) on OR
20: shift/reduce conflict (shift 49(2), red'n 89(0)) on XOR
20: shift/reduce conflict (shift 62(0), red'n 89(0)) on ADD
20: shift/reduce conflict (shift 64(0), red'n 89(0)) on DELETE
20: shift/reduce conflict (shift 65(0), red'n 89(0)) on SET
20: shift/reduce conflict (shift 63(0), red'n 89(0)) on DONE
20: shift/reduce conflict (shift 33(0), red'n 89(0)) on AGE
20: shift/reduce conflict (shift 34(0), red'n 89(0)) on DUE
20: shift/reduce conflict (shift 30(0), red'n 89(0)) on LIKE
20: shift/reduce conflict (shift 43(0), red'n 89(0)) on LOOP
20: shift/reduce conflict (shift 60(0), red'n 89(0)) on HELP
20: shift/reduce conflict (shift 36(0), red'n 89(0)) on QUOTE
20: shift/reduce conflict (shift 35(0), red'n 89(0)) on DQUOTE
state 20
	task_help:  TASK.HELP 
	task_list:  TASK.task_list_filter 
	task_add:  TASK.ADD content task_add_filter 
	task_done:  TASK.DONE id_group 
	task_delete:  TASK.DELETE id_group 
	task_set:  TASK.SET id content task_update_filter 
	task_set:  TASK.id SET content task_update_filter 
	task_set:  TASK.id content task_update_filter 
	task_list_filter: .    (49)
	assign_group: .    (79)
	shard_content: .    (89)

	NUM  shift 38
	IDENT  shift 42
	PLUS  shift 45
	MINUS  shift 46
	COLON  shift 44
	NOT  shift 50
	AND  shift 47
	OR  shift 48
	XOR  shift 49
	ADD  shift 62
	DELETE  shift 64
	SET  shift 65
	DONE  shift 63
	AGE  shift 33
	DUE  shift 34
	LIKE  shift 30
	LOOP  shift 43
	HELP  shift 60
	QUOTE  shift 36
	DQUOTE  shift 35
	.  reduce 49 (src line 144)

	id  goto 66
	id_group  goto 67
	task_list_filter  goto 61
	content  goto 68
	content_group  goto 31
	assign_group  goto 32
	content_logic  goto 39
	assign_tag  goto 40
	unassign_tag  goto 41
	shard_content  goto 37

state 21
	task_list:  task_list_filter.    (28)

	.  reduce 28 (src line 95)


22: shift/reduce conflict (shift 38(0), red'n 89(0)) on NUM
22: shift/reduce conflict (shift 42(0), red'n 89(0)) on IDENT
22: shift/reduce conflict (shift 79(3), red'n 89(0)) on PLUS
22: shift/reduce conflict (shift 80(3), red'n 89(0)) on MINUS
22: shift/reduce conflict (shift 44(0), red'n 89(0)) on COLON
22: shift/reduce conflict (shift 81(0), red'n 89(0)) on NOT
22: shift/reduce conflict (shift 47(1), red'n 89(0)) on AND
22: shift/reduce conflict (shift 48(1), red'n 89(0)) on OR
22: shift/reduce conflict (shift 49(2), red'n 89(0)) on XOR
22: shift/reduce conflict (shift 72(0), red'n 89(0)) on ADD
22: shift/reduce conflict (shift 73(0), red'n 89(0)) on DELETE
22: shift/reduce conflict (shift 74(0), red'n 89(0)) on SET
22: shift/reduce conflict (shift 75(0), red'n 89(0)) on DONE
22: shift/reduce conflict (shift 76(0), red'n 89(0)) on AGE
22: shift/reduce conflict (shift 77(0), red'n 89(0)) on DUE
22: shift/reduce conflict (shift 78(0), red'n 89(0)) on LIKE
22: shift/reduce conflict (shift 43(0), red'n 89(0)) on LOOP
22: shift/reduce conflict (shift 36(0), red'n 89(0)) on QUOTE
22: shift/reduce conflict (shift 35(0), red'n 89(0)) on DQUOTE
state 22
	task_add:  ADD.content task_add_filter 
	shard_content:  ADD.shard_content 
	shard_content: .    (89)

	NUM  shift 38
	IDENT  shift 42
	PLUS  shift 79
	MINUS  shift 80
	COLON  shift 44
	NOT  shift 81
	AND  shift 47
	OR  shift 48
	XOR  shift 49
	ADD  shift 72
	DELETE  shift 73
	SET  shift 74
	DONE  shift 75
	AGE  shift 76
	DUE  shift 77
	LIKE  shift 78
	LOOP  shift 43
	QUOTE  shift 36
	DQUOTE  shift 35
	.  reduce 89 (src line 237)

	id  goto 82
	id_group  goto 71
	content  goto 69
	shard_content  goto 70

23: shift/reduce conflict (shift 84(1), red'n 72(0)) on AND
23: shift/reduce conflict (shift 85(1), red'n 72(0)) on OR
23: shift/reduce conflict (shift 86(2), red'n 72(0)) on XOR
23: shift/reduce conflict (shift 83(0), red'n 72(0)) on ADD
state 23
	task_add:  content.ADD task_add_filter 
	content_group:  content.    (72)
	content_logic:  content.AND content 
	content_logic:  content.OR content 
	content_logic:  content.XOR content 

	AND  shift 84
	OR  shift 85
	XOR  shift 86
	ADD  shift 83
	.  reduce 72 (src line 200)


24: shift/reduce conflict (shift 38(0), red'n 89(0)) on NUM
24: shift/reduce conflict (shift 42(0), red'n 89(0)) on IDENT
24: shift/reduce conflict (shift 79(3), red'n 89(0)) on PLUS
24: shift/reduce conflict (shift 80(3), red'n 89(0)) on MINUS
24: shift/reduce conflict (shift 44(0), red'n 89(0)) on COLON
24: shift/reduce conflict (shift 81(0), red'n 89(0)) on NOT
24: shift/reduce conflict (shift 47(1), red'n 89(0)) on AND
24: shift/reduce conflict (shift 48(1), red'n 89(0)) on OR
24: shift/reduce conflict (shift 49(2), red'n 89(0)) on XOR
24: shift/reduce conflict (shift 72(0), red'n 89(0)) on ADD
24: shift/reduce conflict (shift 73(0), red'n 89(0)) on DELETE
24: shift/reduce conflict (shift 74(0), red'n 89(0)) on SET
24: shift/reduce conflict (shift 75(0), red'n 89(0)) on DONE
24: shift/reduce conflict (shift 76(0), red'n 89(0)) on AGE
24: shift/reduce conflict (shift 77(0), red'n 89(0)) on DUE
24: shift/reduce conflict (shift 78(0), red'n 89(0)) on LIKE
24: shift/reduce conflict (shift 43(0), red'n 89(0)) on LOOP
state 24
	task_delete:  DELETE.id_group 
	shard_content:  DELETE.shard_content 
	shard_content: .    (89)

	NUM  shift 38
	IDENT  shift 42
	PLUS  shift 79
	MINUS  shift 80
	COLON  shift 44
	NOT  shift 81
	AND  shift 47
	OR  shift 48
	XOR  shift 49
	ADD  shift 72
	DELETE  shift 73
	SET  shift 74
	DONE  shift 75
	AGE  shift 76
	DUE  shift 77
	LIKE  shift 78
	LOOP  shift 43
	.  reduce 89 (src line 237)

	id  goto 82
	id_group  goto 87
	shard_content  goto 88

 25: reduce/reduce conflict  (red'ns 49 and 89) on $end
25: shift/reduce conflict (shift 38(0), red'n 89(0)) on NUM
25: shift/reduce conflict (shift 42(0), red'n 89(0)) on IDENT
25: shift/reduce conflict (shift 45(3), red'n 89(0)) on PLUS
25: shift/reduce conflict (shift 46(3), red'n 89(0)) on MINUS
25: shift/reduce conflict (shift 44(0), red'n 89(0)) on COLON
25: shift/reduce conflict (shift 50(0), red'n 89(0)) on NOT
25: shift/reduce conflict (shift 47(1), red'n 89(0)) on AND
25: shift/reduce conflict (shift 48(1), red'n 89(0)) on OR
25: shift/reduce conflict (shift 49(2), red'n 89(0)) on XOR
25: shift/reduce conflict (shift 72(0), red'n 89(0)) on ADD
25: shift/reduce conflict (shift 90(0), red'n 89(0)) on DELETE
25: shift/reduce conflict (shift 74(0), red'n 89(0)) on SET
25: shift/reduce conflict (shift 89(0), red'n 89(0)) on DONE
25: shift/reduce conflict (shift 33(0), red'n 89(0)) on AGE
25: shift/reduce conflict (shift 34(0), red'n 89(0)) on DUE
25: shift/reduce conflict (shift 30(0), red'n 89(0)) on LIKE
25: shift/reduce conflict (shift 43(0), red'n 89(0)) on LOOP
 25: reduce/reduce conflict  (red'ns 49 and 89) on HELP
25: shift/reduce conflict (shift 36(0), red'n 89(0)) on QUOTE
25: shift/reduce conflict (shift 35(0), red'n 89(0)) on DQUOTE
 25: reduce/reduce conflict  (red'ns 49 and 79) on $end
25: shift/reduce conflict (shift 38(0), red'n 79(0)) on NUM
25: shift/reduce conflict (shift 42(0), red'n 79(0)) on IDENT
25: shift/reduce conflict (shift 45(3), red'n 79(0)) on PLUS
25: shift/reduce conflict (shift 46(3), red'n 79(0)) on MINUS
25: shift/reduce conflict (shift 44(0), red'n 79(0)) on COLON
25: shift/reduce conflict (shift 50(0), red'n 79(0)) on NOT
25: shift/reduce conflict (shift 47(1), red'n 79(0)) on AND
25: shift/reduce conflict (shift 48(1), red'n 79(0)) on OR
25: shift/reduce conflict (shift 49(2), red'n 79(0)) on XOR
25: shift/reduce conflict (shift 72(0), red'n 79(0)) on ADD
25: shift/reduce conflict (shift 90(0), red'n 79(0)) on DELETE
25: shift/reduce conflict (shift 74(0), red'n 79(0)) on SET
25: shift/reduce conflict (shift 89(0), red'n 79(0)) on DONE
25: shift/reduce conflict (shift 33(0), red'n 79(0)) on AGE
25: shift/reduce conflict (shift 34(0), red'n 79(0)) on DUE
25: shift/reduce conflict (shift 30(0), red'n 79(0)) on LIKE
25: shift/reduce conflict (shift 43(0), red'n 79(0)) on LOOP
 25: reduce/reduce conflict  (red'ns 49 and 79) on HELP
25: shift/reduce conflict (shift 36(0), red'n 79(0)) on QUOTE
25: shift/reduce conflict (shift 35(0), red'n 79(0)) on DQUOTE
state 25
	task_done:  id_group.DONE 
	task_delete:  id_group.DELETE 
	task_list_filter:  id_group.task_list_filter 
	shard_content:  id_group.shard_content 
	task_list_filter: .    (49)
	shard_content: .    (89)
	assign_group: .    (79)

	NUM  shift 38
	IDENT  shift 42
	PLUS  shift 45
	MINUS  shift 46
	COLON  shift 44
	NOT  shift 50
	AND  shift 47
	OR  shift 48
	XOR  shift 49
	ADD  shift 72
	DELETE  shift 90
	SET  shift 74
	DONE  shift 89
	AGE  shift 33
	DUE  shift 34
	LIKE  shift 30
	LOOP  shift 43
	QUOTE  shift 36
	DQUOTE  shift 35
	.  reduce 49 (src line 144)

	id  goto 82
	id_group  goto 67
	task_list_filter  goto 91
	content  goto 68
	content_group  goto 31
	assign_group  goto 32
	content_logic  goto 39
	assign_tag  goto 40
	unassign_tag  goto 41
	shard_content  goto 92

26: shift/reduce conflict (shift 38(0), red'n 89(0)) on NUM
26: shift/reduce conflict (shift 42(0), red'n 89(0)) on IDENT
26: shift/reduce conflict (shift 79(3), red'n 89(0)) on PLUS
26: shift/reduce conflict (shift 80(3), red'n 89(0)) on MINUS
26: shift/reduce conflict (shift 44(0), red'n 89(0)) on COLON
26: shift/reduce conflict (shift 81(0), red'n 89(0)) on NOT
26: shift/reduce conflict (shift 47(1), red'n 89(0)) on AND
26: shift/reduce conflict (shift 48(1), red'n 89(0)) on OR
26: shift/reduce conflict (shift 49(2), red'n 89(0)) on XOR
26: shift/reduce conflict (shift 72(0), red'n 89(0)) on ADD
26: shift/reduce conflict (shift 73(0), red'n 89(0)) on DELETE
26: shift/reduce conflict (shift 74(0), red'n 89(0)) on SET
26: shift/reduce conflict (shift 75(0), red'n 89(0)) on DONE
26: shift/reduce conflict (shift 76(0), red'n 89(0)) on AGE
26: shift/reduce conflict (shift 77(0), red'n 89(0)) on DUE
26: shift/reduce conflict (shift 78(0), red'n 89(0)) on LIKE
26: shift/reduce conflict (shift 43(0), red'n 89(0)) on LOOP
state 26
	task_set:  SET.id content task_update_filter 
	shard_content:  SET.shard_content 
	shard_content: .    (89)

	NUM  shift 38
	IDENT  shift 42
	PLUS  shift 79
	MINUS  shift 80
	COLON  shift 44
	NOT  shift 81
	AND  shift 47
	OR  shift 48
	XOR  shift 49
	ADD  shift 72
	DELETE  shift 73
	SET  shift 74
	DONE  shift 75
	AGE  shift 76
	DUE  shift 77
	LIKE  shift 78
	LOOP  shift 43
	.  reduce 89 (src line 237)

	id  goto 93
	id_group  goto 71
	shard_content  goto 94

27: shift/reduce conflict (shift 38(0), red'n 69(0)) on NUM
27: shift/reduce conflict (shift 42(0), red'n 69(0)) on IDENT
27: shift/reduce conflict (shift 79(3), red'n 69(0)) on PLUS
27: shift/reduce conflict (shift 98(3), red'n 69(0)) on MINUS
27: shift/reduce conflict (shift 44(0), red'n 69(0)) on COLON
27: shift/reduce conflict (shift 81(0), red'n 69(0)) on NOT
27: shift/reduce conflict (shift 47(1), red'n 69(0)) on AND
27: shift/reduce conflict (shift 48(1), red'n 69(0)) on OR
27: shift/reduce conflict (shift 49(2), red'n 69(0)) on XOR
27: shift/reduce conflict (shift 72(0), red'n 69(0)) on ADD
27: shift/reduce conflict (shift 73(0), red'n 69(0)) on DELETE
27: shift/reduce conflict (shift 95(0), red'n 69(0)) on SET
27: shift/reduce conflict (shift 75(0), red'n 69(0)) on DONE
27: shift/reduce conflict (shift 76(0), red'n 69(0)) on AGE
27: shift/reduce conflict (shift 77(0), red'n 69(0)) on DUE
27: shift/reduce conflict (shift 78(0), red'n 69(0)) on LIKE
27: shift/reduce conflict (shift 43(0), red'n 69(0)) on LOOP
27: shift/reduce conflict (shift 36(0), red'n 69(0)) on QUOTE
27: shift/reduce conflict (shift 35(0), red'n 69(0)) on DQUOTE
 27: reduce/reduce conflict  (red'ns 69 and 89) on $end
27: shift/reduce conflict (shift 79(3), red'n 89(0)) on PLUS
27: shift/reduce conflict (shift 98(3), red'n 89(0)) on MINUS
27: shift/reduce conflict (shift 77(0), red'n 89(0)) on DUE
27: shift/reduce conflict (shift 43(0), red'n 89(0)) on LOOP
 27: reduce/reduce conflict  (red'ns 69 and 89) on HELP
state 27
	task_set:  id.SET content task_update_filter 
	task_set:  id.content task_update_filter 
	id_group:  id.id_group 
	id_group:  id.MINUS id 
	id_group:  id.    (69)
	shard_content: .    (89)

	NUM  shift 38
	IDENT  shift 42
	PLUS  shift 79
	MINUS  shift 98
	COLON  shift 44
	NOT  shift 81
	AND  shift 47
	OR  shift 48
	XOR  shift 49
	ADD  shift 72
	DELETE  shift 73
	SET  shift 95
	DONE  shift 75
	AGE  shift 76
	DUE  shift 77
	LIKE  shift 78
	LOOP  shift 43
	QUOTE  shift 36
	DQUOTE  shift 35
	.  reduce 69 (src line 185)

	id  goto 82
	id_group  goto 97
	content  goto 96
	shard_content  goto 37

28: shift/reduce conflict (shift 38(0), red'n 89(0)) on NUM
28: shift/reduce conflict (shift 42(0), red'n 89(0)) on IDENT
28: shift/reduce conflict (shift 79(3), red'n 89(0)) on PLUS
28: shift/reduce conflict (shift 80(3), red'n 89(0)) on MINUS
28: shift/reduce conflict (shift 44(0), red'n 89(0)) on COLON
28: shift/reduce conflict (shift 81(0), red'n 89(0)) on NOT
28: shift/reduce conflict (shift 47(1), red'n 89(0)) on AND
28: shift/reduce conflict (shift 48(1), red'n 89(0)) on OR
28: shift/reduce conflict (shift 49(2), red'n 89(0)) on XOR
28: shift/reduce conflict (shift 72(0), red'n 89(0)) on ADD
28: shift/reduce conflict (shift 73(0), red'n 89(0)) on DELETE
28: shift/reduce conflict (shift 74(0), red'n 89(0)) on SET
28: shift/reduce conflict (shift 75(0), red'n 89(0)) on DONE
28: shift/reduce conflict (shift 76(0), red'n 89(0)) on AGE
28: shift/reduce conflict (shift 77(0), red'n 89(0)) on DUE
28: shift/reduce conflict (shift 78(0), red'n 89(0)) on LIKE
28: shift/reduce conflict (shift 43(0), red'n 89(0)) on LOOP
state 28
	task_done:  DONE.id_group 
	shard_content:  DONE.shard_content 
	shard_content: .    (89)

	NUM  shift 38
	IDENT  shift 42
	PLUS  shift 79
	MINUS  shift 80
	COLON  shift 44
	NOT  shift 81
	AND  shift 47
	OR  shift 48
	XOR  shift 49
	ADD  shift 72
	DELETE  shift 73
	SET  shift 74
	DONE  shift 75
	AGE  shift 76
	DUE  shift 77
	LIKE  shift 78
	LOOP  shift 43
	.  reduce 89 (src line 237)

	id  goto 82
	id_group  goto 99
	shard_content  goto 100

state 29
	tag_list:  TAG.tag_list_filter 
	tag_set:  TAG.SET id content 
	tag_list_filter: .    (64)

	NUM  shift 38
	SET  shift 102
	LIKE  shift 104
	.  reduce 64 (src line 169)

	id  goto 82
	id_group  goto 103
	tag_list_filter  goto 101

30: shift/reduce conflict (shift 38(0), red'n 89(0)) on NUM
30: shift/reduce conflict (shift 42(0), red'n 89(0)) on IDENT
30: shift/reduce conflict (shift 79(3), red'n 89(0)) on PLUS
30: shift/reduce conflict (shift 80(3), red'n 89(0)) on MINUS
30: shift/reduce conflict (shift 44(0), red'n 89(0)) on COLON
30: shift/reduce conflict (shift 50(0), red'n 89(0)) on NOT
30: shift/reduce conflict (shift 47(1), red'n 89(0)) on AND
30: shift/reduce conflict (shift 48(1), red'n 89(0)) on OR
30: shift/reduce conflict (shift 49(2), red'n 89(0)) on XOR
30: shift/reduce conflict (shift 72(0), red'n 89(0)) on ADD
30: shift/reduce conflict (shift 73(0), red'n 89(0)) on DELETE
30: shift/reduce conflict (shift 74(0), red'n 89(0)) on SET
30: shift/reduce conflict (shift 75(0), red'n 89(0)) on DONE
30: shift/reduce conflict (shift 76(0), red'n 89(0)) on AGE
30: shift/reduce conflict (shift 77(0), red'n 89(0)) on DUE
30: shift/reduce conflict (shift 78(0), red'n 89(0)) on LIKE
30: shift/reduce conflict (shift 43(0), red'n 89(0)) on LOOP
30: shift/reduce conflict (shift 36(0), red'n 89(0)) on QUOTE
30: shift/reduce conflict (shift 35(0), red'n 89(0)) on DQUOTE
state 30
	task_list_filter:  LIKE.content_group task_list_filter 
	shard_content:  LIKE.shard_content 
	shard_content: .    (89)

	NUM  shift 38
	IDENT  shift 42
	PLUS  shift 79
	MINUS  shift 80
	COLON  shift 44
	NOT  shift 50
	AND  shift 47
	OR  shift 48
	XOR  shift 49
	ADD  shift 72
	DELETE  shift 73
	SET  shift 74
	DONE  shift 75
	AGE  shift 76
	DUE  shift 77
	LIKE  shift 78
	LOOP  shift 43
	QUOTE  shift 36
	DQUOTE  shift 35
	.  reduce 89 (src line 237)

	id  goto 82
	id_group  goto 71
	content  goto 68
	content_group  goto 105
	content_logic  goto 39
	shard_content  goto 106

 31: reduce/reduce conflict  (red'ns 49 and 79) on $end
31: shift/reduce conflict (shift 38(0), red'n 79(0)) on NUM
31: shift/reduce conflict (shift 42(0), red'n 79(0)) on IDENT
31: shift/reduce conflict (shift 45(3), red'n 79(0)) on PLUS
31: shift/reduce conflict (shift 46(3), red'n 79(0)) on MINUS
31: shift/reduce conflict (shift 44(0), red'n 79(0)) on COLON
31: shift/reduce conflict (shift 50(0), red'n 79(0)) on NOT
31: shift/reduce conflict (shift 47(1), red'n 79(0)) on AND
31: shift/reduce conflict (shift 48(1), red'n 79(0)) on OR
31: shift/reduce conflict (shift 49(2), red'n 79(0)) on XOR
31: shift/reduce conflict (shift 72(0), red'n 79(0)) on ADD
31: shift/reduce conflict (shift 73(0), red'n 79(0)) on DELETE
31: shift/reduce conflict (shift 74(0), red'n 79(0)) on SET
31: shift/reduce conflict (shift 75(0), red'n 79(0)) on DONE
31: shift/reduce conflict (shift 33(0), red'n 79(0)) on AGE
31: shift/reduce conflict (shift 34(0), red'n 79(0)) on DUE
31: shift/reduce conflict (shift 30(0), red'n 79(0)) on LIKE
31: shift/reduce conflict (shift 43(0), red'n 79(0)) on LOOP
 31: reduce/reduce conflict  (red'ns 49 and 79) on HELP
31: shift/reduce conflict (shift 36(0), red'n 79(0)) on QUOTE
31: shift/reduce conflict (shift 35(0), red'n 79(0)) on DQUOTE
 31: reduce/reduce conflict  (red'ns 49 and 89) on $end
31: shift/reduce conflict (shift 38(0), red'n 89(0)) on NUM
31: shift/reduce conflict (shift 42(0), red'n 89(0)) on IDENT
31: shift/reduce conflict (shift 45(3), red'n 89(0)) on PLUS
31: shift/reduce conflict (shift 46(3), red'n 89(0)) on MINUS
31: shift/reduce conflict (shift 44(0), red'n 89(0)) on COLON
31: shift/reduce conflict (shift 50(0), red'n 89(0)) on NOT
31: shift/reduce conflict (shift 47(1), red'n 89(0)) on AND
31: shift/reduce conflict (shift 48(1), red'n 89(0)) on OR
31: shift/reduce conflict (shift 49(2), red'n 89(0)) on XOR
31: shift/reduce conflict (shift 72(0), red'n 89(0)) on ADD
31: shift/reduce conflict (shift 73(0), red'n 89(0)) on DELETE
31: shift/reduce conflict (shift 74(0), red'n 89(0)) on SET
31: shift/reduce conflict (shift 75(0), red'n 89(0)) on DONE
31: shift/reduce conflict (shift 33(0), red'n 89(0)) on AGE
31: shift/reduce conflict (shift 34(0), red'n 89(0)) on DUE
31: shift/reduce conflict (shift 30(0), red'n 89(0)) on LIKE
31: shift/reduce conflict (shift 43(0), red'n 89(0)) on LOOP
 31: reduce/reduce conflict  (red'ns 49 and 89) on HELP
31: shift/reduce conflict (shift 36(0), red'n 89(0)) on QUOTE
31: shift/reduce conflict (shift 35(0), red'n 89(0)) on DQUOTE
state 31
	task_list_filter:  content_group.task_list_filter 
	task_list_filter: .    (49)
	assign_group: .    (79)
	shard_content: .    (89)

	NUM  shift 38
	IDENT  shift 42
	PLUS  shift 45
	MINUS  shift 46
	COLON  shift 44
	NOT  shift 50
	AND  shift 47
	OR  shift 48
	XOR  shift 49
	ADD  shift 72
	DELETE  shift 73
	SET  shift 74
	DONE  shift 75
	AGE  shift 33
	DUE  shift 34
	LIKE  shift 30
	LOOP  shift 43
	QUOTE  shift 36
	DQUOTE  shift 35
	.  reduce 49 (src line 144)

	id  goto 82
	id_group  goto 67
	task_list_filter  goto 107
	content  goto 68
	content_group  goto 31
	assign_group  goto 32
	content_logic  goto 39
	assign_tag  goto 40
	unassign_tag  goto 41
	shard_content  goto 37
